# nu_plugin_parquet

./: Cargo.toml  README.md
src/: from_parquet.rs  main.rs
