[package]
authors = ["Darren Schroeder", "Jake Swenson <jake@jakeswenson.com>"]
description = "nu plugin to add parquet support"
edition = "2021"
license = "MIT"
name = "nu_plugin_parquet"
repository = "https://github.com/fdncred/nu_plugin_parquet"
version = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nu-plugin = "0.74.0"
# nu-protocol = "0.74.0"
bytes = "1.7.1"
chrono = { version = "0.4.31", features = ["serde"] }
nu-plugin = { path = "../nushell/crates/nu-plugin", version = "0.97.2" }
nu-protocol = { path = "../nushell/crates/nu-protocol", version = "0.97.2" }
parquet = "49.0.0"
