[package]
name = "nu_plugin_parquet"
version = "0.12.0"
authors = ["Darren Schroeder", "Jake Swenson <jake@jakeswenson.com>"]
edition = "2021"
repository = "https://github.com/fdncred/nu_plugin_parquet"
description = "nu plugin to add parquet support"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nushell dependencies
nu-plugin = "0.102.0"
nu-protocol = "0.102.0"
nu-path = "0.102.0"

# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin", version = "0.98.0" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", version = "0.98.0" }
# nu-path = { path = "../nushell/crates/nu-path", version = "0.98.0" }

bytes = "1.10.0"
chrono = { version = "0.4.39", features = ["serde"] }
parquet = "54.1.0"

[dev-dependencies]
nu-plugin-test-support = "0.102.0"
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }

[profile.release]
opt-level = "s"     # Optimize for size
strip = "debuginfo"
lto = "thin"

[profile.dev]
opt-level = 0
